--- a/src/main/java/com/scarlatti/certloader/ui/controls/CertLoaderDialogOld.form
+++ b/src/main/java/com/scarlatti/certloader/ui/controls/CertLoaderDialogOld.form
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="com.scarlatti.certloader.dialog.CertLoaderDialog">
+<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="com.scarlatti.certloader.ui.controls.CertLoaderDialogOld">
   <grid id="27dc6" binding="certLoaderDialog" layout-manager="GridLayoutManager" row-count="2" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="640" height="490"/>
+      <xy x="20" y="20" width="702" height="490"/>
     </constraints>
     <properties/>
     <border type="none"/>
@@ -30,7 +30,7 @@
         <properties/>
         <border type="none"/>
         <children>
-          <component id="f09b2" class="javax.swing.JButton" binding="getCertificatesCancelButton" default-binding="true">
+          <component id="f09b2" class="javax.swing.JButton" binding="getCertsButton">
             <constraints>
               <grid row="0" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
@@ -38,8 +38,7 @@
               <text value="Get Certificates/Cancel"/>
             </properties>
           </component>
-          <grid id="9dcd7" layout-manager="GridLayoutManager" row-count="2" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-            <margin top="0" left="0" bottom="0" right="0"/>
+          <grid id="9dcd7" binding="certsPanel" layout-manager="BorderLayout" hgap="0" vgap="0">
             <constraints>
               <grid row="1" column="0" row-span="1" col-span="5" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false">
                 <preferred-size width="24" height="153"/>
@@ -49,23 +48,15 @@
             <border type="none"/>
             <children>
               <component id="6bdbf" class="javax.swing.JCheckBox" binding="selectTheCertsYouCheckBox" default-binding="true">
-                <constraints>
-                  <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-                </constraints>
+                <constraints border-constraint="North"/>
                 <properties>
                   <text value="Select the certs you would like to install"/>
                 </properties>
               </component>
-              <hspacer id="4acb6">
-                <constraints>
-                  <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-                </constraints>
-              </hspacer>
-              <vspacer id="3228c">
-                <constraints>
-                  <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
-                </constraints>
-              </vspacer>
+              <component id="86dfd" class="javax.swing.JTable" binding="table1" default-binding="true">
+                <constraints border-constraint="Center"/>
+                <properties/>
+              </component>
             </children>
           </grid>
           <component id="d2d3" class="javax.swing.JButton" binding="installCertificatesButton" default-binding="true">
@@ -86,7 +77,7 @@
               <text value="URL or Path:"/>
             </properties>
           </component>
-          <component id="6ba22" class="javax.swing.JTextField" binding="textField1" default-binding="true">
+          <component id="6ba22" class="javax.swing.JTextField" binding="urlTextBox">
             <constraints>
               <grid row="0" column="1" row-span="1" col-span="3" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="-1"/>
@@ -192,6 +183,11 @@
               <text value="this box would be collapsible"/>
             </properties>
           </component>
+          <nested-form id="4b4b3" form-file="com/scarlatti/certloader/ui/controls/URLToolbar.form">
+            <constraints>
+              <grid row="5" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+          </nested-form>
         </children>
       </grid>
     </children>
