--- a/src/main/java/com/scarlatti/certloader/ui/controls/EditKeystore.form
+++ b/src/main/java/com/scarlatti/certloader/ui/controls/EditKeystore.form
@@ -3,7 +3,7 @@
   <grid id="cbd77" binding="jPanel" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="10" left="10" bottom="10" right="10"/>
     <constraints>
-      <xy x="48" y="54" width="513" height="163"/>
+      <xy x="48" y="54" width="513" height="164"/>
     </constraints>
     <properties/>
     <border type="none"/>
@@ -111,15 +111,6 @@
               <text value="Password:"/>
             </properties>
           </component>
-          <component id="62820" class="javax.swing.JTextField" binding="passwordField">
-            <constraints>
-              <grid row="4" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-                <preferred-size width="150" height="-1"/>
-              </grid>
-              <forms defaultalign-horz="false"/>
-            </constraints>
-            <properties/>
-          </component>
           <component id="f382d" class="javax.swing.JButton" binding="chooseKeystoreButton" default-binding="true">
             <constraints>
               <grid row="2" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
@@ -128,6 +119,15 @@
             <properties>
               <text value="Choose Keystore..."/>
             </properties>
+          </component>
+          <component id="924e6" class="javax.swing.JPasswordField" binding="passwordField">
+            <constraints>
+              <grid row="4" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+                <preferred-size width="150" height="-1"/>
+              </grid>
+              <forms defaultalign-horz="false"/>
+            </constraints>
+            <properties/>
           </component>
         </children>
       </grid>
