--- a/src/main/java/com/scarlatti/certloader/ui/controls/ListKeyStores.form
+++ b/src/main/java/com/scarlatti/certloader/ui/controls/ListKeyStores.form
@@ -3,7 +3,7 @@
   <grid id="27dc6" binding="jPanel" layout-manager="GridLayoutManager" row-count="2" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="10" left="10" bottom="10" right="10"/>
     <constraints>
-      <xy x="20" y="20" width="360" height="157"/>
+      <xy x="20" y="20" width="360" height="189"/>
     </constraints>
     <properties/>
     <border type="none"/>
@@ -68,6 +68,15 @@
               <text value="Add"/>
             </properties>
           </component>
+          <component id="cd967" class="javax.swing.JButton" binding="testInstallButton" default-binding="true">
+            <constraints>
+              <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+              <gridbag weightx="0.0" weighty="0.0"/>
+            </constraints>
+            <properties>
+              <text value="Test Install"/>
+            </properties>
+          </component>
         </children>
       </grid>
       <component id="f25bf" class="javax.swing.JButton" binding="selectNoneButton" default-binding="true">
@@ -75,7 +84,7 @@
           <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Select None"/>
+          <text value="Use None"/>
         </properties>
       </component>
       <component id="83f0e" class="javax.swing.JButton" binding="selectAllButton" default-binding="true">
@@ -83,7 +92,7 @@
           <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Select All"/>
+          <text value="Use All"/>
         </properties>
       </component>
       <component id="9814e" class="javax.swing.JButton" binding="restoreDefaultsButton" default-binding="true">
