editing works now!

--- a/src/main/java/com/scarlatti/certloader/ui/controls/EditKeystore.form
+++ b/src/main/java/com/scarlatti/certloader/ui/controls/EditKeystore.form
@@ -5,7 +5,9 @@
     <constraints>
       <xy x="48" y="54" width="513" height="164"/>
     </constraints>
-    <properties/>
+    <properties>
+      <maximumSize width="1000" height="164"/>
+    </properties>
     <border type="none"/>
     <children>
       <grid id="94766" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
@@ -82,7 +84,9 @@
               </grid>
               <forms defaultalign-horz="false"/>
             </constraints>
-            <properties/>
+            <properties>
+              <minimumSize width="200" height="24"/>
+            </properties>
           </component>
           <component id="c7077" class="javax.swing.JLabel">
             <constraints>
@@ -100,7 +104,9 @@
               </grid>
               <forms defaultalign-horz="false"/>
             </constraints>
-            <properties/>
+            <properties>
+              <minimumSize width="200" height="24"/>
+            </properties>
           </component>
           <component id="e144b" class="javax.swing.JLabel">
             <constraints>
@@ -127,7 +133,9 @@
               </grid>
               <forms defaultalign-horz="false"/>
             </constraints>
-            <properties/>
+            <properties>
+              <minimumSize width="200" height="25"/>
+            </properties>
           </component>
         </children>
       </grid>
