--- a/src/main/java/com/scarlatti/certloader/ui/controls/ListKeyStores.form
+++ b/src/main/java/com/scarlatti/certloader/ui/controls/ListKeyStores.form
@@ -31,7 +31,7 @@
           </scrollpane>
         </children>
       </grid>
-      <grid id="ecf8c" layout-manager="GridBagLayout">
+      <grid id="ecf8c" binding="editToolbar" layout-manager="GridBagLayout">
         <constraints>
           <grid row="0" column="3" row-span="1" col-span="1" vsize-policy="3" hsize-policy="7" anchor="1" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
