--- a/src/main/java/com/scarlatti/certloader/ui/controls/CertList.form
+++ b/src/main/java/com/scarlatti/certloader/ui/controls/CertList.form
@@ -5,7 +5,9 @@
     <constraints>
       <xy x="20" y="20" width="500" height="127"/>
     </constraints>
-    <properties/>
+    <properties>
+      <preferredSize width="1280" height="493"/>
+    </properties>
     <border type="none"/>
     <children>
       <scrollpane id="7b6f8">
