--- a/src/main/java/com/scarlatti/certloader/ui/controls/CertListWrapper.form
+++ b/src/main/java/com/scarlatti/certloader/ui/controls/CertListWrapper.form
@@ -5,7 +5,12 @@
     <constraints>
       <xy x="20" y="20" width="500" height="43"/>
     </constraints>
-    <properties/>
+    <properties>
+      <minimumSize width="-1" height="-1"/>
+      <opaque value="false"/>
+      <preferredSize width="1280" height="24"/>
+      <requestFocusEnabled value="false"/>
+    </properties>
     <border type="none"/>
     <children/>
   </grid>
