--- a/src/main/java/com/scarlatti/certloader/ui/controls/URLToolbar.form
+++ b/src/main/java/com/scarlatti/certloader/ui/controls/URLToolbar.form
@@ -1,11 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="com.scarlatti.certloader.ui.controls.URLToolbar">
   <grid id="27dc6" binding="jPanel" layout-manager="GridLayoutManager" row-count="1" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-    <margin top="0" left="0" bottom="0" right="0"/>
+    <margin top="10" left="10" bottom="10" right="10"/>
     <constraints>
-      <xy x="20" y="20" width="500" height="48"/>
+      <xy x="20" y="20" width="500" height="56"/>
     </constraints>
-    <properties/>
+    <properties>
+      <opaque value="false"/>
+      <preferredSize width="1280" height="24"/>
+      <requestFocusEnabled value="false"/>
+    </properties>
     <border type="none"/>
     <children>
       <component id="60460" class="javax.swing.JLabel">
