--- a/src/main/java/com/scarlatti/certloader/ui/controls/CertList.form
+++ b/src/main/java/com/scarlatti/certloader/ui/controls/CertList.form
@@ -6,7 +6,8 @@
       <xy x="20" y="20" width="500" height="127"/>
     </constraints>
     <properties>
-      <preferredSize width="1280" height="493"/>
+      <minimumSize width="397" height="50"/>
+      <preferredSize width="200" height="100"/>
     </properties>
     <border type="none"/>
     <children>
