--- a/src/main/java/com/scarlatti/certloader/ui/controls/CertListWrapper.form
+++ b/src/main/java/com/scarlatti/certloader/ui/controls/CertListWrapper.form
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="com.scarlatti.certloader.ui.controls.CertListWrapper">
-  <grid id="27dc6" binding="jPanel" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-    <margin top="0" left="0" bottom="0" right="0"/>
+  <grid id="27dc6" binding="jPanel" layout-manager="CardLayout" hgap="0" vgap="0">
     <constraints>
-      <xy x="20" y="20" width="500" height="43"/>
+      <xy x="20" y="20" width="500" height="182"/>
     </constraints>
     <properties>
       <minimumSize width="-1" height="-1"/>
@@ -12,6 +11,27 @@
       <requestFocusEnabled value="false"/>
     </properties>
     <border type="none"/>
-    <children/>
+    <children>
+      <nested-form id="44b43" form-file="com/scarlatti/certloader/ui/controls/CertListLoadingProgress.form" binding="progressBar">
+        <constraints>
+          <card name="Card1"/>
+        </constraints>
+      </nested-form>
+      <nested-form id="7c2b4" form-file="com/scarlatti/certloader/ui/controls/CertLoadingError.form" binding="errorMessage">
+        <constraints>
+          <card name="Card2"/>
+        </constraints>
+      </nested-form>
+      <nested-form id="14245" form-file="com/scarlatti/certloader/ui/controls/CertList.form" binding="certList">
+        <constraints>
+          <card name="Card3"/>
+        </constraints>
+      </nested-form>
+      <nested-form id="735a5" form-file="com/scarlatti/certloader/ui/controls/WelcomeMessage.form" binding="welcomeMessage">
+        <constraints>
+          <card name="Card4"/>
+        </constraints>
+      </nested-form>
+    </children>
   </grid>
 </form>
