--- a/src/main/java/com/scarlatti/certloader/ui/controls/AppManager.form
+++ b/src/main/java/com/scarlatti/certloader/ui/controls/AppManager.form
@@ -39,7 +39,7 @@
                 <properties/>
                 <border type="none"/>
                 <children>
-                  <nested-form id="27b61" form-file="com/scarlatti/certloader/ui/controls/ListKeyStores.form">
+                  <nested-form id="27b61" form-file="com/scarlatti/certloader/ui/controls/ListKeyStores.form" binding="listKeyStores">
                     <constraints>
                       <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
                     </constraints>
