--- a/src/main/java/com/scarlatti/certloader/ui/controls/AppManager.form
+++ b/src/main/java/com/scarlatti/certloader/ui/controls/AppManager.form
@@ -10,7 +10,7 @@
     </properties>
     <border type="none"/>
     <children>
-      <tabbedpane id="2bdaa" binding="tabbedPane1" default-binding="true">
+      <tabbedpane id="2bdaa">
         <constraints>
           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
@@ -56,6 +56,21 @@
             <properties/>
             <border type="none"/>
             <children/>
+          </grid>
+          <grid id="865f3" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+            <margin top="0" left="0" bottom="0" right="0"/>
+            <constraints>
+              <tabbedpane title="Log"/>
+            </constraints>
+            <properties/>
+            <border type="none"/>
+            <children>
+              <nested-form id="ae18e" form-file="com/scarlatti/certloader/ui/controls/TextAreaLogger.form" binding="textAreaLogger">
+                <constraints>
+                  <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+                </constraints>
+              </nested-form>
+            </children>
           </grid>
         </children>
       </tabbedpane>
