--- a/src/main/java/com/scarlatti/certloader/ui/controls/AppManager.form
+++ b/src/main/java/com/scarlatti/certloader/ui/controls/AppManager.form
@@ -49,13 +49,19 @@
             </children>
           </grid>
           <grid id="9df5a" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-            <margin top="0" left="0" bottom="0" right="0"/>
+            <margin top="10" left="10" bottom="10" right="10"/>
             <constraints>
               <tabbedpane title="Settings"/>
             </constraints>
             <properties/>
             <border type="none"/>
-            <children/>
+            <children>
+              <nested-form id="e475" form-file="com/scarlatti/certloader/ui/controls/AppSettings.form" binding="settings">
+                <constraints>
+                  <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="1" hsize-policy="3" anchor="9" fill="0" indent="0" use-parent-layout="false"/>
+                </constraints>
+              </nested-form>
+            </children>
           </grid>
           <grid id="865f3" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
             <margin top="0" left="0" bottom="0" right="0"/>
