add bat file generator; bump version

--- a/src/main/java/com/scarlatti/certloader/ui/controls/CertList.form
+++ b/src/main/java/com/scarlatti/certloader/ui/controls/CertList.form
@@ -59,7 +59,7 @@
             </constraints>
             <properties>
               <defaultCapable value="true"/>
-              <text value="Install Selected Certificate(s)"/>
+              <text value="Install Selected Certificate(s)..."/>
             </properties>
           </component>
         </children>
